Fix cart not showing number when 0 + change hover color

--- a/src/components/cart-icon/CartIcon.module.css
+++ b/src/components/cart-icon/CartIcon.module.css
@@ -10,7 +10,7 @@
 }
 
 .cartIcon:hover {
-  color: var(--orange);
+  color: var(--dark-orange);
 }
 
 .cartCount {
